fix: fixed scenery page background images not showing on build

--- a/src/pages/Beaches/Beaches.css
+++ b/src/pages/Beaches/Beaches.css
@@ -1,3 +1,12 @@
-.beaches-page-wrapper .scenery-page .scenery-intro::after {
-    background-image: url("../../assets/images/wave-transition.png");
+.beaches-page-wrapper .scenery-page {
+    & .scenery-intro{
+        background-image:
+            linear-gradient(to left, transparent, var(--background)),
+            url("../../assets/images/beach-wide.jpg");
+
+        &::after {
+            background-image: url("../../assets/images/wave-transition.png");
+        }
+
+    }
 }
