--- a/src/pages/Mountains/Mountains.css
+++ b/src/pages/Mountains/Mountains.css
@@ -1,3 +1,11 @@
-.mountains-page-wrapper .scenery-page .scenery-intro::after {
-    background-image: url("../../assets/images/mountains-transition.png");
+.mountains-page-wrapper .scenery-page {
+    & .scenery-intro{
+        background-image:
+            linear-gradient(to left, transparent, var(--background)),
+            url("../../assets/images/mountains-wide.jpg");
+
+        &::after {
+            background-image: url("../../assets/images/mountains-transition.png");
+        }
+    }
 }
